--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				color: white;
 			}
 			.cform{
-				padding: 8px;
+				padding: 4%;
 				font-family: Roboto, sans-serif;
 				text-transform: uppercase;
 				font-weight: 100;
